# sudoku

./: Justfile  Pipfile  README.md  pyproject.toml  start.sh
docs/: conf.py  index.md
docs/sudoku model/: cell_source.md  field_source.md  index.md  solver.md  types.md
sudoku/: __init__.py  __main__.py  action.py  cell.py  chain.py  field.py  game.py  types.py
sudoku/gui/: __init__.py  board.py  view.py
sudoku/pg_gui/: __init__.py  board.py  events.py  game.py  types.py  view.py
sudoku/solver/: __init__.py  box_line_reduction.py  hidden_pairs.py  hidden_triples.py  naked_pairs.py  naked_triples.py  pointing_pairs.py  show_possibles.py  single_chains.py  singles.py  solved.py  utils.py  x_wing.py
sudoku/text_ui/: game.py
tests/: test_cell.py  test_chain.py  test_field.py
tests/savegames/: box_line_reduction.savegame  hidden_pairs.savegame  hidden_tripples.savegame  pointing_pairs.savegame  single_chains.savegame  xwing.savegame
tests/solver/: test_naked_pairs.py  test_show_possibles.py  test_singles.py  test_solved.py
