[tool.poetry]
name = "sudoku"
version = "0.1.0"
description = ""
authors = ["Olaf Gladis <github@gladis.org>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "*"
pygame = "*"
wrapt = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
furo = "*"
myst-parser = "*"
commonmark = "*"
sphinx-autobuild = "*"
pytest-watch = "*"
pyright = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
