[project]
name = "sudoku"
version = "0.1.0"
description = ""
authors = [{ name = "Olaf Gladis", email = "github@gladis.org" }]
dependencies = [
    "pydantic",
    "pygame",
    "wrapt",
    "textual",
]

[dependency-groups]
dev = [
    "pytest",
    "furo",
    "myst-parser",
    "commonmark",
    "sphinx-autobuild",
    "pytest-watch",
    "pyright",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
